--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: MontSerrat;
+  src: url(assets/Montserrat-VariableFont_wght.ttf);
+}
+
+* {
+  font-family: MontSerrat, sans-serif;
+}
