--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,5 +1,5 @@
 <h1 class="title">
-  {{ title }}
+  {{ name }}
 </h1>
 <div class="task-container">
   <app-task *ngFor="let task of tasks" [content]="task.content" [id]="task.id" [checked]="task.checked"></app-task>
