--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,18 @@
 * {
   font-family: MontSerrat, sans-serif;
 }
+
+h1 {
+  text-align: center;
+  color: #661aff;
+}
+
+input {
+  border: 0;
+}
+
+button {
+  background-color: transparent;
+  border: 1px solid #661affa0;
+  border-radius: 5px;
+}
