--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,16 @@
   <form [formGroup]="createListForm" class="form">
     <h1>New list</h1>
     <div class="input-container">
-      <input type="text" formControlName="name" placeholder="List name" />
+      <input type="text" formControlName="name" placeholder="List name" required/>
+      <input type="number" formControlName="importanceListe" placeholder="degrée d'importance" required/>
       <div>
-        <input type="text" formControlName="content" placeholder="Task" />
+        <input type="text" formControlName="content" placeholder="Task" required/>
+        <input type="number" formControlName="importance" placeholder="degrée d'importance" required/>
         <button (click)="addTask($event)">+</button>
       </div>
-      <app-task *ngFor="let newTask of newTasks" [content]="newTask"></app-task>
+      <app-task *ngFor="let newTask of newTasks" [task]="newTask"></app-task>
       <button (click)="createList()" type="submit">Add</button>
     </div>
   </form>
-  <app-list *ngFor="let list of lists" [name]="list.name" [tasks]="list.tasks"></app-list>
+  <app-list *ngFor="let list of lists" [name]="list.name" [importance]="list.importance "[tasks]="list.tasks"></app-list>
 </div>
