--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,4 +1,5 @@
 <div class="content-container" [ngClass]="{ checked }">
   <img [src]="checked ? 'assets/img/checked-box.svg' : 'assets/img/unchecked-box.svg'" />
-  {{ content }}
+  {{ task.content }}
+  - <span> {{ task.importance}}</span>
 </div>
